Fix z-index on invite menu

--- a/app/assets/stylesheets/section/invite.scss
+++ b/app/assets/stylesheets/section/invite.scss
@@ -136,7 +136,6 @@ body {
       padding: 0;
       border: none;
       display: block;
-      z-index: -10000;
 
       ul {
         width: 100%;
